changed other highlight thumbnail position to prevent overlap and removed subhead when there's no content

--- a/styles/_featuredPanel.scss
+++ b/styles/_featuredPanel.scss
@@ -100,12 +100,7 @@
   max-height: 500px;
   max-width: 100%;
 
-  // transform: height(400px);
-  // transform: translateX(200px);
-  // transition: transform 500ms ease-in;
-
   &.featured-highlight-expanded {
-    // transform: height(500px);
     animation: expand-out-hightlight-img 250ms ease-out both;
   }
 }
@@ -148,7 +143,7 @@
     margin-bottom: 11px;
   }
 
-  .testN {
+  .otherHighlights-container {
     width: 100%;
     height: 100%;
     position: relative;
@@ -165,23 +160,13 @@
     }
 
     width: 100%;
-    height: 216px;
-    // margin-top: auto;
-    // margin-bottom: 50px;
+    // height for a 3x3 grid of thumbnails
+    // height: 216px;
+    height: 180px;
     position: absolute;
     bottom: 40px;
 
     .highlightImages {
-      // height: 186px;
-      // width: 280px;
-      // display: grid;
-      // grid-template-rows: repeat(3, 60px);
-      // grid-template-columns: repeat(3, 90px);
-
-      // column-gap: 5px;
-      // row-gap: 3px;
-
-      // height: 186px;
       width: auto;
       height: auto;
       display: grid;
@@ -254,11 +239,4 @@
       }
     }
   }
-
-  // .featuredHighlightPanel-container {
-  //   position: fixed;
-  //   width: 400px;
-  //   top: 50%;
-  //   transform: translate(0, -50%);
-  // }
 }
