--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -326,10 +326,6 @@ body {
   display: grid;
   grid-template-rows: repeat(3, 60px);
   grid-template-columns: repeat(3, 90px);
-
-  /* column-gap: 3px;
-      row-gap: 5px; */
-  /* flex-direction: column; */
 }
 
 .centerMaxWidthContainer {
@@ -339,9 +335,4 @@ body {
   max-width: 1320px;
   padding-left: 60px;
   padding-right: 60px;
-
-  //do desktop and mobile
-  // max-width: $max-width;
-  // padding-left: $padding;
-  // padding-right: $padding;
 }
